--- a/src/app/pages/admins/create-user/supply-point/supply-point.component.html
+++ b/src/app/pages/admins/create-user/supply-point/supply-point.component.html
@@ -1,11 +1,12 @@
-<div class="col-12 col-xl-10 offset-xl-1">
+<div class="col-12 col-xl-10 offset-xl-1"
+     *ngIf="supplyPoint">
     <pxe-supply-point-form
         [editMode]="editMode"
         [withoutValidator]="true"
         [formFields]="formFields"
         [formLoading]="formLoading"
         [formSent]="formSent"
-        [formValues]="supplyPointData"
+        [formValues]="supplyPoint"
         [globalError]="globalError"
         [fieldError]="fieldError"
         submitLabel="Další"
