PXEPR-1245-new-icons new navigation icons add

--- a/src/assets/scss/01_base/_icons.scss
+++ b/src/assets/scss/01_base/_icons.scss
@@ -98,7 +98,10 @@ $icons: (
 	double-triangle-right: \e928,
 	leaf:                  \e929,
 	arrow-right:           \e930,
-	graph:                 \e931
+	graph:                 \e931,
+	document-warning:      \e932,
+	document-down:         \e933,
+	document-success:      \e934
 );
 
 // Icons aplication to class
