--- a/src/common/containers/form/forms/supply-point/supply-point-form.component.html
+++ b/src/common/containers/form/forms/supply-point/supply-point-form.component.html
@@ -274,6 +274,7 @@
                                 [id]="'annualConsumptionNTUnit'"
                                 (focus)="fieldWrapperFocus('annualConsumptionNTUnit')"
                                 (blur)="fieldWrapperBlur()"
+                                [error]="formError.annualConsumptionNTUnit || form.controls.annualConsumptionNTUnit.errors"
                                 [inputFocused]="(fieldWrapperFocused$ | async) === 'annualConsumptionNTUnit' || (fieldWrapperFocused$ | async) === 'annualConsumptionNT'"
                                 [showErrorMessage]="false"
                                 [options]="codeLists && codeLists[codeList.ANNUAL_CONSUMPTION_UNITS]"
@@ -324,6 +325,7 @@
                                 [id]="'annualConsumptionVTUnit'"
                                 (focus)="fieldWrapperFocus('annualConsumptionVTUnit')"
                                 (blur)="fieldWrapperBlur()"
+                                [error]="formError.annualConsumptionVTUnit || form.controls.annualConsumptionVTUnit.errors"
                                 [inputFocused]="(fieldWrapperFocused$ | async) === 'annualConsumptionVTUnit' || (fieldWrapperFocused$ | async) === 'annualConsumptionVT'"
                                 [showErrorMessage]="false"
                                 [options]="codeLists && codeLists[codeList.ANNUAL_CONSUMPTION_UNITS]"
@@ -373,6 +375,7 @@
                                 [id]="'annualConsumptionUnit'"
                                 (focus)="fieldWrapperFocus('annualConsumptionUnit')"
                                 (blur)="fieldWrapperBlur()"
+                                [error]="formError.annualConsumptionUnit || form.controls.annualConsumptionUnit.errors"
                                 [inputFocused]="(fieldWrapperFocused$ | async) === 'annualConsumptionUnit' || (fieldWrapperFocused$ | async) === 'annualConsumption'"
                                 [showErrorMessage]="false"
                                 [options]="codeLists && codeLists[codeList.ANNUAL_CONSUMPTION_UNITS]"
@@ -480,13 +483,11 @@
                                 [appendButtonIcon]="helpDocuments && helpDocuments[''] ? 'icon--info' : null"
                                 (appendButtonAction)="showHelp('timeToContractEndPeriodId', 'Jistič')"
                                 [error]="formError.timeToContractEndPeriodId || form.controls.timeToContractEndPeriodId.errors"
-                                label=""
                                 (focus)="fieldWrapperFocus('timeToContractEndPeriodId')"
                                 (blur)="fieldWrapperBlur()"
                                 [inputFocused]="(fieldWrapperFocused$ | async) === 'timeToContractEnd' || (fieldWrapperFocused$ | async) === 'timeToContractEndPeriodId'"
                                 [options]="codeLists && codeLists[codeList.TIME_TO_CONTRACT_END_PERIOD]"
                                 [parentForm]="form"
-                                [clearable]="false"
                                 [selectName]="'timeToContractEndPeriodId'"
                                 [showErrorMessage]="false"
                                 [success]="form.controls.timeToContractEndPeriodId.valid && (form.controls.timeToContractEndPeriodId.touched || formError.timeToContractEndPeriodId)"
