--- a/src/common/containers/form/forms/change-password/change-password-form.component.html
+++ b/src/common/containers/form/forms/change-password/change-password-form.component.html
@@ -17,8 +17,8 @@
         *ngIf="!isPublic"
         [error]="formError.currentPassword || form.controls.currentPassword.errors"
         [formControl]="form.controls.currentPassword"
-        customFormGroupClass="form-group--public"
-        [lightField]="true"
+        [customFormGroupClass]="isPublic ? 'form-group--public' : ''"
+        [lightField]="isPublic ? true : false"
         [id]="'currentPassword'"
         label="Současné heslo"
         type="PASSWORD"
@@ -28,9 +28,9 @@
     ></lnd-form-field>
     <lnd-form-field
         [error]="form.controls.password.errors"
-        customFormGroupClass="form-group--public"
+        [customFormGroupClass]="isPublic ? 'form-group--public' : ''"
         [formControl]="form.controls.password"
-        [lightField]="true"
+        [lightField]="isPublic ? true : false"
         [id]="'password'"
         label="Nové heslo"
         type="PASSWORD"
@@ -40,9 +40,9 @@
     ></lnd-form-field>
     <lnd-form-field
         [error]="form.controls.confirmPassword.errors"
-        [lightField]="true"
+        [lightField]="isPublic ? true : false"
         [formControl]="form.controls.confirmPassword"
-        customFormGroupClass="form-group--public"
+        [customFormGroupClass]="isPublic ? 'form-group--public' : ''"
         [id]="'confirmPassword'"
         label="Potvrďte nové heslo"
         [success]="form.controls.confirmPassword.valid && form.controls.confirmPassword.touched"
@@ -52,6 +52,7 @@
     ></lnd-form-field>
     <div class="text-right">
         <lnd-button
+            *ngIf="isPublic"
             type="gradient-primary"
             class="w-100"
             customClass="btn-public btn--icon-right w-100"
@@ -61,6 +62,14 @@
             label="Změnit heslo"
             icon="icon--arrow-right"
             iconPosition="right">
+        </lnd-button>
+        <lnd-button
+            *ngIf="!isPublic"
+            type="primary"
+            [submit]="true"
+            (action)="submitForm($event)"
+            [isDisabled]="!!formLoading"
+            label="Změnit heslo">
         </lnd-button>
     </div>
 </form>
