--- a/src/common/containers/form/forms/supply-point/supply-point-form.component.html
+++ b/src/common/containers/form/forms/supply-point/supply-point-form.component.html
@@ -278,6 +278,7 @@
                                 [inputFocused]="(fieldWrapperFocused$ | async) === 'annualConsumptionNTUnit' || (fieldWrapperFocused$ | async) === 'annualConsumptionNT'"
                                 [showErrorMessage]="false"
                                 [options]="codeLists && codeLists[codeList.ANNUAL_CONSUMPTION_UNITS]"
+                                [clearable]="false"
                                 label="jednotka"
                                 [parentForm]="form"
                                 [selectName]="'annualConsumptionNTUnit'"
@@ -329,6 +330,7 @@
                                 [inputFocused]="(fieldWrapperFocused$ | async) === 'annualConsumptionVTUnit' || (fieldWrapperFocused$ | async) === 'annualConsumptionVT'"
                                 [showErrorMessage]="false"
                                 [options]="codeLists && codeLists[codeList.ANNUAL_CONSUMPTION_UNITS]"
+                                [clearable]="false"
                                 [parentForm]="form"
                                 [selectName]="'annualConsumptionVTUnit'"
                                 [success]="form.controls.annualConsumptionVTUnit.valid && (form.controls.annualConsumptionVTUnit.touched || formError.annualConsumptionVTUnit)"
@@ -379,6 +381,7 @@
                                 [inputFocused]="(fieldWrapperFocused$ | async) === 'annualConsumptionUnit' || (fieldWrapperFocused$ | async) === 'annualConsumption'"
                                 [showErrorMessage]="false"
                                 [options]="codeLists && codeLists[codeList.ANNUAL_CONSUMPTION_UNITS]"
+                                [clearable]="false"
                                 [parentForm]="form"
                                 [selectName]="'annualConsumptionUnit'"
                                 [success]="form.controls.annualConsumptionUnit.valid && (form.controls.annualConsumptionUnit.touched || formError.annualConsumptionUnit)"
@@ -489,6 +492,7 @@
                                 [inputFocused]="(fieldWrapperFocused$ | async) === 'timeToContractEnd' || (fieldWrapperFocused$ | async) === 'timeToContractEndPeriodId'"
                                 [options]="codeLists && codeLists[codeList.TIME_TO_CONTRACT_END_PERIOD]"
                                 [parentForm]="form"
+                                [clearable]="false"
                                 [selectName]="'timeToContractEndPeriodId'"
                                 [showErrorMessage]="false"
                                 [success]="form.controls.timeToContractEndPeriodId.valid && (form.controls.timeToContractEndPeriodId.touched || formError.timeToContractEndPeriodId)"
