--- a/src/app/layouts/public/public-layout.component.html
+++ b/src/app/layouts/public/public-layout.component.html
@@ -66,6 +66,13 @@
                 </a>
             </li>
             <li class="footer-navigation__item">
+                <a [routerLink]="['/', CONSTS.PATHS.BLOG]"
+                   class="footer-navigation__link"
+                >
+                    Blog
+                </a>
+            </li>
+            <li class="footer-navigation__item">
                 <a [routerLink]="['/', CONSTS.PATHS.SECURING_YOUR_DATA]"
                    class="footer-navigation__link"
                 >
