--- a/src/app/pages/public/blog/blog.component.html
+++ b/src/app/pages/public/blog/blog.component.html
@@ -1,9 +1,7 @@
-<p>blog works!</p>
-<p>blog works!</p>
-<p>blog works!</p>
-<p>blog works!</p>
-<p>blog works!</p>
-<p>blog works!</p>
-<p>blog works!</p>
-<p>blog works!</p>
-<p>blog works!</p>
+<div class="container-fluid container-fluid--max-width">
+    <div class="container-content container-content--public">
+        <pxe-layout-container pageTitle="faq.title" [breadcrumbItemsSimple]="[]">
+            <router-outlet></router-outlet>
+        </pxe-layout-container>
+    </div>
+</div>
