PXEPR-1274-card-blog minor fix

--- a/src/assets/scss/01_base/_variables.scss
+++ b/src/assets/scss/01_base/_variables.scss
@@ -286,6 +286,7 @@ $zindex-lp-bg-two-half-after:        -1;
 $zindex-lp-picure-section:           1;
 $zindex-lp-picture-bg:               -1;
 $zindex-drop-zone:                   1;
+$zindex-card-blog-img:               -1;
 
 
 // Pagination
