--- a/src/app/pages/public/blog/overview/overview.component.html
+++ b/src/app/pages/public/blog/overview/overview.component.html
@@ -2,18 +2,17 @@
     <div class="col-12 col-xl-10 offset-xl-1 mb-3">
         <ul class="text-center link-list">
             <li class="link-list__item">
-                <a class="link-list__link link-list__link--active">
+                <a class="link-list__link"
+                   [class.link-list__link--active]="CONSTS.BLOG_ALL_ARTICLE_TYPE === (activeTag$ | async)"
+                   (click)="changeArticleType($event, CONSTS.BLOG_ALL_ARTICLE_TYPE)">
                     Vše
                 </a>
             </li>
-            <li class="link-list__item">
-                <a class="link-list__link">
-                    Elektřina
-                </a>
-            </li>
-            <li class="link-list__item">
-                <a class="link-list__link">
-                    Plyn
+            <li *ngFor="let type of blogTypes" class="link-list__item">
+                <a class="link-list__link"
+                   [class.link-list__link--active]="type.url === (activeTag$ | async)"
+                   (click)="changeArticleType($event ,type.url)">
+                    {{type.label}}
                 </a>
             </li>
         </ul>
