--- a/src/app/pages/public/blog/blog.component.html
+++ b/src/app/pages/public/blog/blog.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid container-fluid--max-width">
     <div class="container-content container-content--public">
-        <pxe-layout-container [pageTitle]="blog.title" [breadcrumbItemsSimple]="breadcrumb | updateActiveBreadcrumb: blogTypes:(activeTag$ | async)">
+        <pxe-layout-container [pageTitle]="(activeType$ | async)?.title" [breadcrumbItemsSimple]="(breadcrumb$ | async)">
             <router-outlet></router-outlet>
         </pxe-layout-container>
     </div>
