--- a/src/app/pages/public/blog/overview/overview.component.html
+++ b/src/app/pages/public/blog/overview/overview.component.html
@@ -1,20 +1,22 @@
-<div class="row">
-    <div class="col-12 col-xl-10 offset-xl-1 mb-3">
-        <ul class="text-center link-list">
-            <li class="link-list__item">
-                <a class="link-list__link"
-                   [class.link-list__link--active]="CONSTS.BLOG_ALL_ARTICLE_TYPE === (activeTag$ | async)"
-                   (click)="changeArticleType($event, CONSTS.BLOG_ALL_ARTICLE_TYPE)">
-                    Vše
-                </a>
-            </li>
-            <li *ngFor="let type of blogTypes" class="link-list__item">
-                <a class="link-list__link"
-                   [class.link-list__link--active]="type.url === (activeTag$ | async)"
-                   (click)="changeArticleType($event ,type.url)">
-                    {{type.label}}
-                </a>
-            </li>
-        </ul>
+<ng-container *ngIf="activeTag$ | async as activeTag">
+    <div class="row">
+        <div class="col-12 col-xl-10 offset-xl-1 mb-3">
+            <ul class="text-center link-list">
+                <li *ngFor="let type of blogTypes$ | async" class="link-list__item">
+                    <a class="link-list__link"
+                       [class.link-list__link--active]="type.url === activeTag.url"
+                       (click)="changeArticleType($event ,type.url)">
+                        {{type.label}}
+                    </a>
+                </li>
+            </ul>
+        </div>
     </div>
-</div>
+    <div class="card-blogs" *ngIf="activeArticles$ | async as articles">
+        <div class="row card-blogs__inner">
+            <div class="col-md-4 card-blog__item" *ngFor="let article of articles">
+                <lnd-card (clickAction)="showDetail(activeTag, article)" [data]="article"></lnd-card>
+            </div>
+        </div>
+    </div>
+</ng-container>
