--- a/src/app/pages/public/landing/landing.component.html
+++ b/src/app/pages/public/landing/landing.component.html
@@ -237,6 +237,32 @@
             </div>
         </div>
     </div>
+    <div #blog class="section section-help">
+        <div class="container-fluid container-fluid--max-width container-fluid--light">
+            <div class="row px-3">
+                <div class="col-xl-8 offset-xl-2 mb-3 text-md-center">
+                    <h2 class="h2--public">Blog</h2>
+                </div>
+                <div class="card-blogs mb-3">
+                    <div class="row card-blogs__inner">
+                        <div class="col-md-4 card-blog__item" *ngFor="let article of articles">
+                            <lnd-card (clickAction)="showDetailArticle(article)" [data]="article"></lnd-card>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-8 offset-xl-2 text-center">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <a class="text-with-icon text-with-icon--link text-with-icon--icon-right mb-4 mb-md-0" (click)="routerToFaq($event)">
+                                <span class="text-with-icon__text text-body">Zobrazit všechny články</span>
+                                <span class="icon icon--add-new text-with-icon__icon text-with-icon__icon--public"></span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="section section--gradient-blue">
         <div class="container-fluid container-fluid--max-width">
             <div class="row no-gutters">
