--- a/src/app/layouts/public/public-layout.component.html
+++ b/src/app/layouts/public/public-layout.component.html
@@ -10,6 +10,7 @@
         (howItWorksAction)="scrollToService.scrollToHowItWorks()"
         (helpAction)="scrollToService.scrollToHelp()"
         (faqAction)="scrollToService.scrollToFaq()"
+        (blogAction)="scrollToService.scrollToBlog()"
         (bestPricesInTheWorldAction)="scrollToService.scrollToBestPricesInTheWorld()"
         (landingPageRedirect)="landingPageRedirect()"
         (loginAction)="login()"
