--- a/src/app/pages/public/faq/faq-overview/faq-overview.component.html
+++ b/src/app/pages/public/faq/faq-overview/faq-overview.component.html
@@ -2,7 +2,7 @@
     <div [innerHTML]="data.shortContent"></div>
     <div *ngIf="data.fullContent">
         <a class="link mt-4"
-           [routerLink]="['/', CONSTS.PATHS.FAQ, data.tag.type, data.url]">
+           [routerLink]="['/', CONSTS.PATHS.FAQ, data.tag[0].url, data.url]">
             Zobrazit více
         </a>
     </div>
