--- a/src/common/containers/layout-container/layout-container.component.html
+++ b/src/common/containers/layout-container/layout-container.component.html
@@ -1,4 +1,4 @@
-<div class="row text-center mb-md-6">
+<div *ngIf="withHeader" class="row text-center mb-md-6">
     <div class="col-12 col-xl-6 offset-xl-3">
         <h1 [innerHTML]="pageTitle"></h1>
     </div>
