--- a/src/app/pages/public/landing/landing.component.html
+++ b/src/app/pages/public/landing/landing.component.html
@@ -216,7 +216,8 @@
                 </div>
                 <div class="card-blogs mb-3">
                     <div class="row card-blogs__inner">
-                        <div class="col-md-4 card-blog__item" *ngFor="let article of articles">
+                        <div *ngFor="let article of articles"
+                             class="col-md-4 card-blog__item">
                             <lnd-card (clickAction)="showDetailArticle(article)" [data]="article"></lnd-card>
                         </div>
                     </div>
@@ -224,7 +225,8 @@
                 <div class="col-xl-8 offset-xl-2 text-center">
                     <div class="row">
                         <div class="col-md-6">
-                            <a class="text-with-icon text-with-icon--link text-with-icon--icon-right mb-4 mb-md-0" (click)="routerToFaq($event)">
+                            <a (click)="routerToAllArticle($event)"
+                                class="text-with-icon text-with-icon--link text-with-icon--icon-right mb-4 mb-md-0">
                                 <span class="text-with-icon__text text-body">Zobrazit všechny články</span>
                                 <span class="icon icon--add-new text-with-icon__icon text-with-icon__icon--public"></span>
                             </a>
